feat: Agregado direccionamiento a pagina juego.

--- a/devchallenge/src/components/Header.astro
+++ b/devchallenge/src/components/Header.astro
@@ -9,12 +9,12 @@
     <nav>
       <ul class="flex">
         <li>
-          <a href="/register" class="bg-neutral-900 text-white py-2 px-2 mr-2 rounded hover:bg-neutral-700">
+          <a href="/game" class="bg-neutral-900 text-white py-2 px-2 mr-2 rounded hover:bg-neutral-700">
             Jugar
           </a>
         </li>
         <li>
-          <a href="/signin" class="bg-[#2B0975] text-white py-2 px-2 rounded hover:bg-violet-800">
+          <a href="/tasks" class="bg-[#2B0975] text-white py-2 px-2 rounded hover:bg-violet-800">
             Tareas
           </a>
         </li>
