--- a/devchallenge/src/pages/index.astro
+++ b/devchallenge/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
-
 import Arkanoid from './../components/Arkanoid/Arkanoid.jsx';
 ---
 
@@ -23,11 +22,12 @@ import Arkanoid from './../components/Arkanoid/Arkanoid.jsx';
           y disfruta de la combinación perfecta entre entretenimiento y
           productividad en un solo lugar.
         </p>
-        <button
+        <a
+          href="/register"
           class="py-3 px-4 bg-purple-700 text-white font-semibold mr-3 rounded"
         >
-          Empezar
-        </button>
+          Registrate
+        </a>
         <button
           class="bg-neutral-500 py-3 px-4 rounded font-semibold text-white"
         >
